deploy/070-Grafana/040-DeploymentConfig.yaml
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: grafana
  labels:
    app: grafana
    deploymentconfig: grafana
  annotations:
    app.openshift.io/connects-to: influxdb
spec:
 replicas: 1
 selector:
   app: grafana
   deploymentconfig: grafana
 triggers:
   - type: ConfigChange
   - type: ImageChange
     imageChangeParams:
       automatic: true
       containerNames:
         - grafana
       from:
         kind: ImageStreamTag
         name: grafana:latest
 template:
   metadata:
     labels:
       app: grafana
       deploymentconfig: grafana
   spec:
     containers:
     - name: grafana
       image: grafana
       imagePullPolicy: IfNotPresent
       readinessProbe:
         httpGet:
           path: /
           port: 3000
         initialDelaySeconds: 15
         timeoutSeconds: 1
       livenessProbe:
         httpGet:
           path: /
           port: 3000
         initialDelaySeconds: 15
         timeoutSeconds: 1
       ports:
       - containerPort: 3000
         name: web
         protocol: TCP
       resources:
         limits:
           memory: 1Gi
       volumeMounts:
       - mountPath: /var/lib/grafana
         name: grafana-storage
       - mountPath: /etc/grafana/provisioning/datasources
         name: grafana-datasources
       - mountPath: /etc/grafana/provisioning/dashboards
         name: grafana-dashboard-providers
       - mountPath: /var/lib/grafana/dashboards
         name: grafana-dashboards
     volumes:
     - name: grafana-storage
       persistentVolumeClaim:
         claimName: grafana-pvc
     - name: grafana-datasources
       configMap:
         name: grafana-datasources
     - name: grafana-dashboard-providers
       configMap:
         name: grafana-dashboard-providers
     - name: grafana-dashboards
       configMap:
         name: grafana-dashboards
